Some bug fixes for showOperator